--- a/templates/footer.html
+++ b/templates/footer.html
@@ -24,16 +24,16 @@
                 <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-2 col-sm-4">
                    <div class="footer__widget mb-40 wow fadeInUp" data-wow-delay=".5s">
                       <div class="footer__widget-head">
-                         <h4 class="footer__widget-title">Products</h4>
+                         <h4 class="footer__widget-title">Categories</h4>
                       </div>
                       <div class="footer__widget-content">
                          <div class="footer__link">
                             <ul>
-                               <li><a href="#">Tutor LMS </a></li>
-                               <li><a href="#">WP Mega Menu </a></li>
-                               <li><a href="#">WP Page Builder </a></li>
-                               <li><a href="#">Themes</a></li>
-                               <li><a href="#">Interactions</a></li>
+                               <li><a href="{% url 'theme' %}">Wordpress</a></li>
+                               <li><a href="{% url 'theme' %}">Web Templates</a></li>
+                               <li><a href="{% url 'theme' %}">Web Applications</a></li>
+                               <li><a href="{% url 'theme' %}">Graphic Templates</a></li>
+                               <li><a href="{% url 'theme' %}">Video Templates</a></li>
                             </ul>
                          </div>
                       </div>
@@ -42,16 +42,16 @@
                 <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-4">
                    <div class="footer__widget mb-40 wow fadeInUp footer__pl"  data-wow-delay=".7s">
                       <div class="footer__widget-head">
-                         <h4 class="footer__widget-title">Resources</h4>
+                         <h4 class="footer__widget-title">Quick Links</h4>
                       </div>
                       <div class="footer__widget-content">
                          <div class="footer__link">
                             <ul>
-                               <li><a href="#">Promotion </a></li>
-                               <li><a href="#">Submit Content</a></li>
-                               <li><a href="#">Resources</a></li>
-                               <li><a href="#">Design System</a></li>
-                               <li><a href="#">Expert</a></li>
+                               <li><a href="{% url 'home' %}">Home </a></li>
+                               <li><a href="{% url 'theme' %}">Themes</a></li>
+                               <li><a href="{% url 'about' %}">Support</a></li>
+                               <li><a href="{% url 'about' %}">About</a></li>
+                               <li><a href="{% url 'contact' %}">Contact</a></li>
                             </ul>
                          </div>
                       </div>
@@ -65,11 +65,11 @@
                       <div class="footer__widget-content">
                          <div class="footer__link">
                             <ul>
-                               <li><a href="#">About Us</a></li>
-                               <li><a href="#">Blog</a></li>
-                               <li><a href="#">Support</a></li>
-                               <li><a href="#">Pricing</a></li>
-                               <li><a href="#">Contact</a></li>
+                               <li><a href="{% url 'home' %}">Home </a></li>
+                               <li><a href="{% url 'theme' %}">Themes</a></li>
+                               <li><a href="{% url 'about' %}">Support</a></li>
+                               <li><a href="{% url 'about' %}">About</a></li>
+                               <li><a href="{% url 'contact' %}">Contact</a></li>
                             </ul>
                          </div>
                       </div>
@@ -83,11 +83,11 @@
                       <div class="footer__widget-content">
                          <div class="footer__link">
                             <ul>
-                               <li><a href="#">Forums</a></li>
-                               <li><a href="#">Community</a></li>
-                               <li><a href="#">Meetups</a></li>
-                               <li><a href="#">Jobs</a></li>
-                               <li><a href="#">Careers</a></li>
+                               <li><a href="{% url 'home' %}">Home </a></li>
+                               <li><a href="{% url 'theme' %}">Themes</a></li>
+                               <li><a href="{% url 'about' %}">Support</a></li>
+                               <li><a href="{% url 'about' %}">About</a></li>
+                               <li><a href="{% url 'contact' %}">Contact</a></li>
                             </ul>
                          </div>
                       </div>
