--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,12 +1,44 @@
 {% load static %}
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="en">
    <head>
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>Spell Market </title>
-      <meta name="description" content="">
+      <title>Best Themes & Templates for Website, Web apps and more | Spell Market</title>
+      <meta name="description" content="Explore our vast collection of themes and templates for websites, blogs, and  web apps.
+      Find the perfect theme to elevate your website today. Customize beautifully designed themes for any industry.">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      
+      <link rel="canonical" href="https://spellsoft.com" />
+
+      <?xml version="1.0" encoding="UTF-8"?>
+      <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+         <url>
+            <loc>https://www.spellsoft.com.np/</loc>
+            <priority>1.0</priority>
+         </url>
+         <url>
+            <loc>https://www.spellsoft.com.np/about</loc>
+            <priority>0.8</priority>
+         </url>
+         <url>
+            <loc>https://www.spellsoft.com.np/theme</loc>
+            <priority>0.9</priority>
+         </url>
+         <url>
+            <loc>https://www.spellsoft.com.np/about</loc>
+            <priority>0.7</priority>
+         </url>
+         <url>
+            <loc>https://www.spellsoft.com.np/contact</loc>
+            <priority>0.7</priority>
+         </url>
+         <!-- Add more URLs as needed -->
+      </urlset>
+
+
+
+      
       <!-- Place favicon.ico in the root directory -->
       <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.png' %}">
       <!-- CSS here -->
