--- a/templates/home.html
+++ b/templates/home.html
@@ -310,7 +310,7 @@
   <!-- cta area end -->
 
       <!-- brand area start -->
-    <div class="brand__area pb-65 pt-80">
+    {% comment %} <div class="brand__area pb-65 pt-80">
        <div class="container">
           <div class="row">
              <div class="col-xxl-12">
@@ -324,7 +324,7 @@
              </div>
           </div>
        </div>
-    </div>
+    </div> {% endcomment %}
     <!-- brand area end -->
 
   <!-- testimonial area start -->
