--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,6 +8,14 @@
       <meta name="description" content="Explore our collection of themes and templates for websites, blogs, and  web apps. Customize beautifully designed themes and templates  for your business.">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="keywords" content=" Software development , Custom Templates, Spellsoft, graphic design, web design, website design, ecommerce website design, ecommerce webapp design, in Kathmandu Nepal,Temaplates , themes,buy tenplates ,free templates ,free themes, paid templates, paid themes " />
+      
+      <meta property="og:title" content="SpellSoft - Unleash the Magic of Software Development">
+      <meta property="og:description" content="Software development , Custom Templates, Spellsoft, graphic design, web design, website design, ecommerce website design, ecommerce webapp design, in Kathmandu Nepal,Temaplates , themes,buy tenplates ,free templates ,free themes, paid templates, paid themes ">
+      <meta property="og:image" content="https://spellsoft.com.np/static/assets/img/logo/logo.png">
+      <meta property="og:url" content="https://spellsoft.com.np">
+      <meta property="og:type" content="website">
+
+
       <link rel="canonical" href="https://spellsoft.com.np" />
       
       <script type="application/ld+json">
