--- a/templates/nav.html
+++ b/templates/nav.html
@@ -19,32 +19,42 @@
       <link rel="canonical" href="https://spellsoft.com.np" />
       
       <script type="application/ld+json">
-  {
-    "@context": "http://schema.org",
-    "@type": "LocalBusiness",
-    "name": "Spell Market-Best Themes & Templates for Website, Web apps market in Nepal",
-    "description": "We specialize in providing high-quality designs for websites, blogs, web applications , graphic template and many more.",
-    "url": "https://spellsoft.com.np/",
-    "logo": "https://spellsoft.com.np/static/assets/img/logo/logo.png",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "Mid-Baneshwor",
-      "addressLocality": "Kathmandu",
-      "addressRegion": "Bagmati",
-      "postalCode": "44660",
-      "addressCountry": "Nepal"
-    },
-    "telephone": "01-5910781",
-    "openingHours": "Mo-Fr 09:00 A.M.-6:00 P.M.",
-    "sameAs": [
-      "https://www.facebook.com/spellinnovation",
-      "https://twitter.com/SpellInnovation",
-      "https://www.instagram.com/yourbusiness"
-      "https://www.linkedin.com/company/spellinnovation/mycompany"
-      "tiktok.com/@spellinnovation"
-    ]
-  }
-  </script>
+        {
+          "@context": "http://schema.org",
+          "@type": "LocalBusiness",
+          "name": "Spell Market-Best Themes & Templates for Website, Web apps market in Nepal",
+          "description": "We specialize in providing high-quality designs for websites, blogs, web applications , graphic template and many more.",
+          "url": "https://spellsoft.com.np/",
+          "logo": "https://spellsoft.com.np/static/assets/img/logo/logo.png",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Mid-Baneshwor",
+            "addressLocality": "Kathmandu",
+            "addressRegion": "Bagmati",
+            "postalCode": "44660",
+            "addressCountry": "Nepal"
+          },
+          "openingHours": "Mo-Fr 09:00 A.M.-6:00 P.M.",
+        }
+        </script>
+        <script type="application/ld+json">
+          {
+          "@context": "https://schema.org",
+          "@type": "Corporation",
+          "name": "Spell Market",
+          "alternateName": "Spell Soft",
+          "url": "https://www.spellsoft.com.np",
+          "logo": "https://spellsoft.com.np/static/assets/img/logo/logo.png",
+          "telephone": "01-5910781",
+          "sameAs": [
+              "https://www.facebook.com/spellinnovation",
+            "https://twitter.com/SpellInnovation",
+            "https://www.instagram.com/yourbusiness"
+            "https://www.linkedin.com/company/spellinnovation/mycompany"
+            "tiktok.com/@spellinnovation"
+              ]
+          }
+      </script>
       
       
       
