--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,7 +11,7 @@
       
       <meta property="og:title" content="SpellSoft - Unleash the Magic of Software Development">
       <meta property="og:description" content="Software development , Custom Templates, Spellsoft, graphic design, web design, website design, ecommerce website design, ecommerce webapp design, in Kathmandu Nepal,Temaplates , themes,buy tenplates ,free templates ,free themes, paid templates, paid themes ">
-      <meta property="og:image" content="https://spellsoft.com.np/static/assets/img/logo/logo.png">
+      <meta property="og:image" content="https://spellsoft.com.np/static/assets/img/logo/logo.png" alt="spell innovation">
       <meta property="og:url" content="https://spellsoft.com.np">
       <meta property="og:type" content="website">
 
