--- a/templates/nav.html
+++ b/templates/nav.html
@@ -12,6 +12,7 @@
       <meta property="og:title" content="SpellSoft - Unleash the Magic of Software Development">
       <meta property="og:description" content="Software development , Custom Templates, Spellsoft, graphic design, web design, website design, ecommerce website design, ecommerce webapp design, in Kathmandu Nepal,Temaplates , themes,buy tenplates ,free templates ,free themes, paid templates, paid themes ">
       <meta property="og:image" content="{% static 'market_logo.png' %}" alt="spell innovation">
+      <meta property="og:image:alt" content="spell innovation">
       <meta property="og:url" content="https://spellsoft.com.np">
       <meta property="og:type" content="website">
 
