--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,7 +11,7 @@
       
       <meta property="og:title" content="SpellSoft - Unleash the Magic of Software Development">
       <meta property="og:description" content="Software development , Custom Templates, Spellsoft, graphic design, web design, website design, ecommerce website design, ecommerce webapp design, in Kathmandu Nepal,Temaplates , themes,buy tenplates ,free templates ,free themes, paid templates, paid themes ">
-      <meta property="og:image" content="{% static 'market_logo.png' %}" alt="spell innovation">
+      <meta property="og:image" content="https://spellsoft.com.np/static/market_logo.png" alt="spell innovation">
       <meta property="og:image:alt" content="spell innovation">
       <meta property="og:url" content="https://spellsoft.com.np">
       <meta property="og:type" content="website">
@@ -26,7 +26,7 @@
           "name": "Spell Market-Best Themes & Templates for Website, Web apps market in Nepal",
           "description": "We specialize in providing high-quality designs for websites, blogs, web applications , graphic template and many more.",
           "url": "https://spellsoft.com.np/",
-          "logo": "{% static 'market_logo.png' %}",
+          "logo": "https://spellsoft.com.np/static/market_logo.png",
           "address": {
             "@type": "PostalAddress",
             "streetAddress": "Mid-Baneshwor",
@@ -45,7 +45,7 @@
           "name": "Spell Market",
           "alternateName": "Spell Soft",
           "url": "https://www.spellsoft.com.np",
-          "logo": "{% static 'market_logo.png' %}",
+          "logo": "https://spellsoft.com.np/static/market_logo.png",
           "telephone": "01-5910781",
           "sameAs": [
               "https://www.facebook.com/spellinnovation",
