--- a/templates/nav.html
+++ b/templates/nav.html
@@ -16,6 +16,12 @@
       <meta property="og:url" content="https://spellsoft.com.np">
       <meta property="og:type" content="website">
 
+      <meta property="ia:markup_url" content="https://spellsoft.com.np">
+      <meta property="ia:markup_url_dev" content="https://spellsoft.com.np-dev">
+      <meta property="ia:rules_url" content="https://spellsoft.com.np">
+      <meta property="ia:rules_url_dev" content="https://spellsoft.com.np">
+
+
 
       <link rel="canonical" href="https://spellsoft.com.np" />
       
