added meta details

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,8 @@
-{% load static %} {% include 'nav.html' %}
+{% load static %} 
 <!-- header area start -->
 {% for message in messages %}
 <div class="popup-msg">
   <p class="popup-msg-text">{{message}}</p>
-  <!-- <i class="fa fa-times popup-close"></i> -->
 </div>
 {% endfor %}
 <style>
