--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,9 @@
-{% load static %} {% include 'header.html' %}
+{% load static %}
+{% include 'nav.html' %}
+{% include 'meta/home_meta.html' %}
+{% include 'header.html' %}
 <main>
+  
   <!-- hero area start -->
   <section class="hero__area hero__height grey-bg-3 d-flex align-items-center">
     <div class="hero__shape">
