--- a/templates/theme.html
+++ b/templates/theme.html
@@ -1,4 +1,7 @@
-{% include 'header.html' %} {% load static %}
+{% load static %}
+{% include 'nav.html' %}
+{% include 'meta/themes_meta.html' %}
+{% include 'header.html' %}
 <main>
   <!-- bg shape area start -->
   <div class="bg-shape">
