--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,7 @@
-{% include  'header.html' %}
 {% load static %}
+{% include 'nav.html' %}
+{% include 'meta/about_meta.html' %}
+{% include 'header.html' %}
 <main>
 
     <!-- bg shape area start -->
