--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,7 @@
-{% include 'header.html' %}
 {% load static %}
+{% include 'nav.html' %}
+{% include 'meta/contact_meta.html' %}
+{% include 'header.html' %}
 <main>
 
     <!-- bg shape area start -->
