--- a/templates/blog_single.html
+++ b/templates/blog_single.html
@@ -1,5 +1,7 @@
-{% include 'header.html' %}
 {% load static %}
+{% include 'nav.html' %}
+{% include 'meta/blogs_meta.html' %}
+{% include 'header.html' %}
 
 <main>
 
