--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,3 +1,6 @@
+{% load static %}
+{% include 'nav.html' %}
+{% include 'meta/themes_meta.html' %}
 {% include 'header.html' %}
 <script src="https://khalti.s3.ap-south-1.amazonaws.com/KPG/dist/2020.12.17.0.0.0/khalti-checkout.iffe.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
