--- a/templates/purchase_details.html
+++ b/templates/purchase_details.html
@@ -1,3 +1,6 @@
+{% load static %}
+{% include 'nav.html' %}
+{% include 'meta/themes_meta.html' %}
 {% include 'header.html' %}
 <section class="category__area pt-105 pb-135">
   <div class="container">
