--- a/templates/theme_details.html
+++ b/templates/theme_details.html
@@ -1,5 +1,7 @@
-{% include 'header.html' %}
 {% load static %}
+{% include 'nav.html' %}
+{% include 'meta/themes_meta.html' %}
+{% include 'header.html' %}
 
 <main>
 
