--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -1,4 +1,7 @@
-{% include 'header.html' %} {% load static %}
+{% load static %}
+{% include 'nav.html' %}
+{% include 'meta/blogs_meta.html' %}
+{% include 'header.html' %}
 <main>
   <!-- bg shape area start -->
   <div class="bg-shape">
