--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,3 +1,6 @@
+{% load static %}
+{% include 'nav.html' %}
+{% include 'meta/themes_meta.html' %}
 {% include 'header.html' %}
 
     <!-- category area start -->
