--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -35,77 +35,41 @@
   <section class="postbox__area pb-120">
     <div class="container">
       <div class="row">
-        <div class="col-xxl-8 col-xl-8 col-lg-8">
-          <div class="postbox__wrapper">
-            {% for blog_data in blog_data %}
-            <article
-              class="postbox__item format-image fix mb-50 wow fadeInUp"
-              data-wow-delay=".2s"
-            >
-              <div class="postbox__thumb">
-                <a href="{% url 'blogdetails' id=blog_data.id %}" class="w-img">
-                  <img src="{{blog_data.image.url}}" alt="spellsoft" />
-                </a>
-              </div>
-              <div class="postbox__content">
-                <div class="postbox__meta d-flex mb-10">
-                  
-                  <div class="postbox__date">
-                    <span><i class="fal fa-clock"></i>{{blog_data.created.date}}</span>
-                  </div>
-                </div>
-                <h3 class="postbox__title mb-15">
-                 <a href="{% url 'blogdetails' id=blog_data.id %}"
-                    >{{blog_data.title}}</a
-                  > 
-                </h3>
-                <!--<div class="postbox__text mb-20">-->
-                 
-                <!--    {{blog_data.blog|truncatechars:250|safe}}-->
-                
-                <!--</div>-->
-                <div class="postbox__author d-flex align-items-center">
-                  <h5>Post by <a href="#">Spell Innovation</a></h5>
-                </div>
-              </div>
-            </article>
-            {% endfor %}
-          </div>
-        </div>
+        {% for blog_data in blog_data %}
         <div class="col-xxl-4 col-xl-4 col-lg-4">
-          <div class="blog__sidebar-wrapper ml-30">
-            <div class="blog__sidebar mb-30">
-              <div class="sidebar__widget mb-30">
-                <div class="sidebar__widget-title">
-                  <h3>Recent Blogs</h3>
+          <div class="postbox__wrapper">
+            <article class="postbox__item format-image fix mb-50 wow fadeInUp" data-wow-delay=".2s" >
+                <div class="postbox__thumb">
+                  <a href="{% url 'blogdetails' id=blog_data.id %}" class="w-img">
+                    <img src="{{blog_data.image.url}}" alt="spellsoft" />
+                  </a>
                 </div>
-                <div class="sidebar__widget-content">
-                  <div class="rc__post-wrapper">
-                    <div class="rc__post d-flex align-items-center">
-                      <div class="rc__thumb mr-15">
-                        <a href=""
-                          ><img
-                            src="{% static 'assets/img/blog/sm/blog-sm-1.jpg' %}"
-                            alt="spellsoft"
-                        /></a> 
-                      </div>
-                      <div class="rc__content">
-                        <div class="rc__meta">
-                          <span>October 15, 2021</span>
-                        </div>
-                        <h6 class="rc__title">
-                          <a href=""
-                            >Communication Between Departments</a
-                          > 
-                        </h6>
-                      </div>
+                <div class="postbox__content">
+                  <div class="postbox__meta d-flex mb-10">
+                    
+                    <div class="postbox__date">
+                      <span><i class="fal fa-clock"></i>{{blog_data.created.date}}</span>
                     </div>
                   </div>
+                  <h3 class="postbox__title mb-15">
+                  <a href="{% url 'blogdetails' id=blog_data.id %}"
+                      >{{blog_data.title}}</a
+                    > 
+                  </h3>
+                  <!--<div class="postbox__text mb-20">-->
+                  
+                  <!--    {{blog_data.blog|truncatechars:250|safe}}-->
+                  
+                  <!--</div>-->
+                  <div class="postbox__author d-flex align-items-center">
+                    <h5>Post by <a href="#">Spell Innovation</a></h5>
+                  </div>
                 </div>
-              </div>
-            </div>
+            </article>
           </div>
         </div>
+        {% endfor %}
+        
       </div>
     </div>
   </section>
