--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta property="og:title" content="SpellSoft - Unleash the Magic of Software Development">
       <meta property="og:description" content="Software development , Custom Templates, Spellsoft, graphic design, web design, website design, ecommerce website design, ecommerce webapp design, in Kathmandu Nepal,Temaplates , themes,buy tenplates ,free templates ,free themes, paid templates, paid themes ">
-      <meta property="og:image" content="https://spellsoft.com.np/static/og_image.jpg" alt="spell innovation">
+      <meta property="og:image" content="https://spellsoft.com.np/static/og.png" >
       <meta property="og:image:alt" content="spell innovation">
       <meta property="og:url" content="https://spellsoft.com.np">
       <meta property="og:type" content="website">
