--- a/templates/meta/blogs_meta.html
+++ b/templates/meta/blogs_meta.html
@@ -1,4 +1,4 @@
 <title>{{snippet.blogs_meta_title}}</title>
-<meta name="description" content="{{snippet.blogs_meta_title}}">
-<meta name="keywords" content="{{snippet.blogs_meta_title}}" />
+<meta name="description" content="{{snippet.blogs_meta_description}}">
+<meta name="keywords" content="{{snippet.blogs_meta_keywords}}" />
 </head>
