--- a/templates/meta/themes_meta.html
+++ b/templates/meta/themes_meta.html
@@ -1,4 +1,4 @@
 <title>{{snippet.themes_meta_title}}</title>
-<meta name="description" content="{{snippet.themes_meta_title}}">
-<meta name="keywords" content="{{snippet.themes_meta_title}}" />
+<meta name="description" content="{{snippet.themes_meta_description}}">
+<meta name="keywords" content="{{snippet.themes_meta_keywords}}" />
 </head>
