--- a/templates/meta/contact_meta.html
+++ b/templates/meta/contact_meta.html
@@ -1,4 +1,4 @@
 <title>{{snippet.contact_meta_title}}</title>
-<meta name="description" content="{{snippet.contact_meta_title}}">
-<meta name="keywords" content="{{snippet.contact_meta_title}}" />
+<meta name="description" content="{{snippet.contact_meta_description}}">
+<meta name="keywords" content="{{snippet.contact_meta_keywords}}" />
 </head>
