--- a/templates/meta/home_meta.html
+++ b/templates/meta/home_meta.html
@@ -1,4 +1,4 @@
     <title>{{snippet.home_meta_title}}</title>
-    <meta name="description" content="{{snippet.home_meta_title}}">
-    <meta name="keywords" content="{{snippet.home_meta_title}}" />
+    <meta name="description" content="{{snippet.home_meta_description}}">
+    <meta name="keywords" content="{{snippet.home_meta_keywords}}" />
 </head>
