--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -14,17 +14,13 @@
     <div class="container">
       <div class="row">
         <div class="col-xxl-12">
-          <div class="page__title-content mb-50">
-            <h2 class="page__title">Latest From The Blog</h2>
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item">
-                  <a href="{% url 'home' %}">Home</a>
-                </li>
-                <li class="breadcrumb-item active" aria-current="page">Blog</li>
-              </ol>
-            </nav>
-          </div>
+            <div class="page__title-wrapper mb-55">
+                <h1 class="page__title-1">Explore Our latest blogs.</h1>
+                <p>Dive into our dynamic collection of the latest blog posts. We bring you a curated selection of articles covering a wide range of topics, 
+                  including web design trends, development tips, and industry news. <br><br>Stay updated with the latest trends, gain new perspectives, and learn best practices to 
+                  enhance your online presence. Immerse yourself in our ever-growing collection of engaging and thought-provoking blog posts, designed to empower and educate
+                   our community.</p>
+            </div>
         </div>
       </div>
     </div>
