--- a/templates/footer.html
+++ b/templates/footer.html
@@ -12,16 +12,21 @@
                       <div class="footer__widget-content">
                          <div class="footer__social mb-30">
                             <ul>
-                               <li><a href="https://www.facebook.com/spellinnovations" class="fb"><i class="fab fa-facebook-f"></i></a></li>
-                               <li><a href="https://www.instagram.com/spellinnovation/" class="tw"><i class="fab fa-instagram"></i></a></li>
-                               <li><a href="https://www.linkedin.com/company/spellinnovation" class="pin"><i class="fab fa-linkedin"></i></a></li>
+                               <li><a href="https://www.facebook.com/spellinnovation" class="fb"><i class="fab fa-facebook-f"></i></a></li>
+                               <li><a href="https://www.instagram.com/spellinnovation/" class="pin"><i class="fab fa-instagram"></i></a></li>
+                               <li><a href="https://www.linkedin.com/company/spellinnovation" class="tw"><i class="fab fa-linkedin"></i></a></li>
+                            </ul>
+                            <ul>
+                               <li><a href="https://www.linkedin.com/company/spellinnovation/mycompany" class="pin"><i class="fab fa-youtube"></i></a></li>
+                               <li><a href="https://twitter.com/SpellInnovation" class="tw"><i class="fab fa-twitter"></i></a></li>
+                               <li><a href="tiktok.com/@spellinnovation" class="pin"><i class="fab fa-tiktok"></i></a></li>
                             </ul>
                          </div>
                          
                       </div>
                    </div>
                 </div>
-                <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-2 col-sm-4">
+                <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-4">
                    <div class="footer__widget mb-40 wow fadeInUp" data-wow-delay=".5s">
                       <div class="footer__widget-head">
                          <h4 class="footer__widget-title">Categories</h4>
@@ -57,37 +62,17 @@
                       </div>
                    </div>
                 </div>
-                <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-2 col-sm-4">
-                   <div class="footer__widget mb-40 wow fadeInUp" data-wow-delay=".9s">
-                      <div class="footer__widget-head">
-                         <h4 class="footer__widget-title">Products</h4>
-                      </div>
-                      <div class="footer__widget-content">
-                         <div class="footer__link">
-                            <ul>
-                               <li><a href="{% url 'home' %}">Home </a></li>
-                               <li><a href="{% url 'theme' %}">Themes</a></li>
-                               <li><a href="{% url 'about' %}">Support</a></li>
-                               <li><a href="{% url 'about' %}">About</a></li>
-                               <li><a href="{% url 'contact' %}">Contact</a></li>
-                            </ul>
-                         </div>
-                      </div>
-                   </div>
-                </div>
-                <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-2 col-sm-4">
+                <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-4">
                    <div class="footer__widget mb-40 wow fadeInUp" data-wow-delay="1.2s">
                       <div class="footer__widget-head">
-                         <h4 class="footer__widget-title">Community</h4>
+                         <h4 class="footer__widget-title">Contact Us</h4>
                       </div>
                       <div class="footer__widget-content">
                          <div class="footer__link">
                             <ul>
-                               <li><a href="{% url 'home' %}">Home </a></li>
-                               <li><a href="{% url 'theme' %}">Themes</a></li>
-                               <li><a href="{% url 'about' %}">Support</a></li>
-                               <li><a href="{% url 'about' %}">About</a></li>
-                               <li><a href="{% url 'contact' %}">Contact</a></li>
+                               <li><i class="fa fa-search" aria-hidden="true" style="margin-right:10px;"></i><a href="tel+(977) 9801047737">9801047737 </a></li>
+                               <li><i class="fa fa-envelope" aria-hidden="true" style="margin-right:10px;"></i><a href="info@spellinnovation.com">info@spellinnovation.com </a></li>
+                               <li><i class="fa fa-map-marker" aria-hidden="true" style="margin-right:10px;"></i><a href="tel+(977) 9801047737">Mid - Baneshwor, Kathmandu </a></li>
                             </ul>
                          </div>
                       </div>
@@ -108,9 +93,9 @@
                    <div class="col-xxl-6 col-xl-6 col-md-6">
                       <div class="footer__bottom-link wow fadeInUp text-md-end" data-wow-delay=".8s">
                          <ul>
-                            <li><a href="#">Licence</a></li>
-                            <li><a href="#">Privacy Policy </a></li>
-                            <li><a href="#">Affiliate Notice</a></li>
+                            <li><a href="{% url 'about' %}">Licence</a></li>
+                            <li><a href="{% url 'about' %}">Privacy Policy </a></li>
+                            <li><a href="{% url 'about' %}">Affiliate Notice</a></li>
                          </ul>
                       </div>
                    </div>
