--- a/templates/home.html
+++ b/templates/home.html
@@ -111,7 +111,10 @@
               Browse <br />
               Popular Categories
             </h2>
-            <p>Find over 7000 website templates and themes.</p>
+            <p>Browse through our extensive selection of popular categories in the template and theme market and uncover the ideal
+              designs and solutions customized to meet your specific requirements.<br><br> We take pride in offering a diverse collection
+             of categories that cater to a wide range of interests, preferences, and industries. Explore our popular categories and discover the perfect templates and
+              themes to elevate your online presence and captivate your audience."</p>
           </div>
         </div>
       </div>
