--- a/templates/theme.html
+++ b/templates/theme.html
@@ -12,6 +12,23 @@
   <!-- product area start -->
   <section class="product__area po-rel-z1 pt-100 pb-115 grey-bg">
     <div class="container">
+      <section class="page__title-area pt-85">
+        <div class="container">
+          <div class="row">
+            <div class="col-xxl-12">
+                <div class="page__title-wrapper mb-55">
+                    <h1 class="page__title-1">Browse our Popular Themes and Templates.</h1>
+                    <p>Browse our Popular Themes and Templates:Welcome to our vibrant marketplace, where you can discover an extensive collection of top-notch themes and 
+                      templates. Whether you're a blogger, business owner, or developer, we have a wide range of options to suit your needs. 
+                      <br><br>
+                       Explore our diverse selection, 
+                      featuring stunning website templates, captivating e-commerce themes, sleek design frameworks, and much more. With our curated marketplace, you'll find
+                       the perfect design solution for your website or project. Stay ahead of the curve and unlock endless possibilities with our popular themes and templates.</p>
+                </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <div class="row">
         <div class="col-xxl-4 col-xl-4 col-lg-4 order-lg-first order-last">
           <div class="product__sidebar mr-30">
