--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -15,9 +15,9 @@
       <div class="row">
         <div class="col-xxl-12">
             <div class="page__title-wrapper mb-55">
-                <h1 class="page__title-1">Explore Our latest blogs.</h1>
+                <h1 class="about__title">Explore Our latest blogs.</h1>
                 <p>Dive into our dynamic collection of the latest blog posts. We bring you a curated selection of articles covering a wide range of topics, 
-                  including web design trends, development tips, and industry news. <br><br>Stay updated with the latest trends, gain new perspectives, and learn best practices to 
+                  including web design trends, development tips, and industry news.Stay updated with the latest trends, gain new perspectives, and learn best practices to 
                   enhance your online presence. Immerse yourself in our ever-growing collection of engaging and thought-provoking blog posts, designed to empower and educate
                    our community.</p>
             </div>
