--- a/templates/nav.html
+++ b/templates/nav.html
@@ -14,7 +14,7 @@
       <meta property="og:type" content="website">
 
       <meta property="ia:markup_url" content="https://spellsoft.com.np">
-      <meta property="ia:markup_url_dev" content="https://spellsoft.com.np-dev">
+      <meta property="ia:markup_url_dev" content="https://spellsoft.com.np">
       <meta property="ia:rules_url" content="https://spellsoft.com.np">
       <meta property="ia:rules_url_dev" content="https://spellsoft.com.np">
 
