--- a/templates/footer.html
+++ b/templates/footer.html
@@ -70,9 +70,9 @@
                       <div class="footer__widget-content">
                          <div class="footer__link">
                             <ul>
-                               <li><i class="fa fa-search" aria-hidden="true" style="margin-right:10px;"></i><a href="tel+(977) 9801047737">9801047737 </a></li>
-                               <li><i class="fa fa-envelope" aria-hidden="true" style="margin-right:10px;"></i><a href="info@spellinnovation.com">info@spellinnovation.com </a></li>
-                               <li><i class="fa fa-map-marker" aria-hidden="true" style="margin-right:10px;"></i><a href="tel+(977) 9801047737">Mid - Baneshwor, Kathmandu </a></li>
+                               <li><i class="fa fa-search" aria-hidden="true" style="margin-right:10px;"></i><a href="tel:+(977) 9801047737">9801047737 </a></li>
+                               <li><i class="fa fa-envelope" aria-hidden="true" style="margin-right:10px;"></i><a href="mailto:info@spellinnovation.com?subject=Hello Spell Innovation">info@spellinnovation.com </a></li>
+                               <li><i class="fa fa-map-marker" aria-hidden="true" style="margin-right:10px;"></i><a href="https://goo.gl/maps/yEm6QDVfmHvZVZ6S7" target="_blank">Mid - Baneshwor, Kathmandu </a></li>
                             </ul>
                          </div>
                       </div>
