--- a/templates/footer.html
+++ b/templates/footer.html
@@ -94,7 +94,7 @@
                       <div class="footer__bottom-link wow fadeInUp text-md-end" data-wow-delay=".8s">
                          <ul>
                             <li><a href="{% url 'terms_and_condition' %}">Terms and Conditions</a></li>
-                            <li><a href="{% url 'privacy_policy' %}">Privacy Policy </a></li>
+                            <li><a href="{% url 'about' %}">Privacy Policy </a></li>
                             <li><a href="{% url 'about' %}">Affiliate Notice</a></li>
                          </ul>
                       </div>
@@ -123,29 +123,5 @@
  <script src="{% static 'assets/js/wow.min.js' %}"></script>
  <script src="{% static 'assets/js/imagesloaded.pkgd.min.js' %}"></script>
  <script src="{% static 'assets/js/main.js' %}"></script>
-       <?xml version="1.0" encoding="UTF-8"?>
-      <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
-         <url>
-            <loc>https://www.spellsoft.com.np/</loc>
-            <priority>1.0</priority>
-         </url>
-         <url>
-            <loc>https://www.spellsoft.com.np/about</loc>
-            <priority>0.8</priority>
-         </url>
-         <url>
-            <loc>https://www.spellsoft.com.np/theme</loc>
-            <priority>0.9</priority>
-         </url>
-         <url>
-            <loc>https://www.spellsoft.com.np/about</loc>
-            <priority>0.7</priority>
-         </url>
-         <url>
-            <loc>https://www.spellsoft.com.np/contact</loc>
-            <priority>0.7</priority>
-         </url>
-         <!-- Add more URLs as needed -->
-      </urlset>
 </body>
 </html>
