--- a/templates/theme.html
+++ b/templates/theme.html
@@ -18,7 +18,7 @@
             <div class="col-xxl-12">
                 <div class="page__title-wrapper mb-55">
                     <h1 class="about__title">Browse our Popular Themes and Templates.</h1>
-                    <p>Browse our Popular Themes and Templates:Welcome to our vibrant marketplace, where you can discover an extensive collection of top-notch themes and 
+                    <p>Welcome to our vibrant marketplace, where you can discover an extensive collection of top-notch themes and 
                       templates. Whether you're a blogger, business owner, or developer, we have a wide range of options to suit your needs. 
                       
                        Explore our diverse selection, 
